--- a/public/index.html
+++ b/public/index.html
@@ -1,160 +1,97 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Anoncoin DogeOS Scanner</title>
-    <meta
-      name="description"
-      content="Paste an anoncoin.it token link and get a DogeOS-style intel brief."
-    />
-    <style>
-      body {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          sans-serif;
-        background: #050816;
-        color: #f9fafb;
-        margin: 0;
-        padding: 2rem;
-      }
-      .box {
-        max-width: 720px;
-        margin: 0 auto;
-        background: rgba(15, 23, 42, 0.9);
-        border-radius: 16px;
-        padding: 1.5rem 1.8rem;
-        box-shadow: 0 18px 45px rgba(0, 0, 0, 0.45);
-        border: 1px solid rgba(148, 163, 184, 0.3);
-      }
-      h1 {
-        font-size: 1.5rem;
-        margin-bottom: 0.5rem;
-      }
-      p {
-        margin: 0.25rem 0;
-        opacity: 0.9;
-      }
-      textarea {
-        width: 100%;
-        margin-top: 0.75rem;
-        padding: 0.75rem;
-        border-radius: 8px;
-        border: 1px solid rgba(148, 163, 184, 0.5);
-        background: rgba(15, 23, 42, 0.9);
-        color: #f9fafb;
-        resize: vertical;
-        min-height: 70px;
-      }
-      button {
-        margin-top: 0.75rem;
-        padding: 0.6rem 1.2rem;
-        border-radius: 999px;
-        border: none;
-        cursor: pointer;
-        font-weight: 600;
-        background: #22c55e;
-        color: #020617;
-      }
-      button:disabled {
-        opacity: 0.6;
-        cursor: default;
-      }
-      .result {
-        margin-top: 1.25rem;
-        padding: 0.9rem 0.9rem 0.9rem 0.9rem;
-        border-radius: 8px;
-        background: rgba(15, 23, 42, 0.8);
-        border: 1px solid rgba(55, 65, 81, 0.8);
-        white-space: pre-wrap;
-        font-family: monospace;
-        font-size: 0.9rem;
-      }
-      .error {
-        color: #f97373;
-      }
-      .small {
-        font-size: 0.8rem;
-        opacity: 0.75;
-        margin-top: 0.4rem;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="box">
-      <h1>Anoncoin Token Scanner</h1>
-      <p>
-        Paste an <strong>anoncoin.it</strong> launchpad URL to receive a
-        DogeOS-style intel brief.
-      </p>
-      <p class="small">
-        Only anoncoin.it URLs are accepted. Output is informational only, not
-        financial advice.
-      </p>
+<head>
+  <meta charset="utf-8" />
+  <title>Anoncoin Token Scanner</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #000;
+      color: #fff;
+      margin: 0;
+      padding: 30px;
+    }
+    .container {
+      max-width: 700px;
+      margin: auto;
+      background: #111;
+      padding: 25px;
+      border-radius: 10px;
+      border: 1px solid #333;
+    }
+    textarea {
+      width: 100%;
+      padding: 10px;
+      background: #222;
+      color: #fff;
+      border: 1px solid #444;
+      border-radius: 6px;
+    }
+    button {
+      margin-top: 10px;
+      padding: 10px 18px;
+      border: none;
+      background: #00ff9d;
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
+      border-radius: 6px;
+    }
+    .result {
+      margin-top: 18px;
+      padding: 15px;
+      background: #000;
+      border: 1px solid #333;
+      border-radius: 6px;
+      white-space: pre-wrap;
+      font-family: monospace;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h2>Anoncoin Scanner</h2>
+    <p>Paste an <strong>Anoncoin token URL</strong> (https://anoncoin.it/token) or a <strong>contract address</strong>.</p>
 
-      <textarea
-        id="url-input"
-        placeholder="Example: https://anoncoin.it/board/some-token-page"
-      ></textarea>
+    <textarea id="input" rows="3" placeholder="https://anoncoin.it/SHIBA2 or 0x... or Solana address"></textarea>
+    <button id="scanBtn">Scan Token</button>
 
-      <button id="analyze-btn">Scan token</button>
+    <div id="result" class="result" style="display:none;"></div>
+  </div>
 
-      <div id="result" class="result" style="display: none;"></div>
-    </div>
+  <script>
+    const inputEl = document.getElementById("input");
+    const btn = document.getElementById("scanBtn");
+    const resultBox = document.getElementById("result");
 
-    <script>
-      const urlInput = document.getElementById("url-input");
-      const analyzeBtn = document.getElementById("analyze-btn");
-      const resultBox = document.getElementById("result");
-
-      async function analyze() {
-        const url = urlInput.value.trim();
-        if (!url) {
-          showResult("Paste an anoncoin.it token URL first.");
-          return;
-        }
-
-        analyzeBtn.disabled = true;
-        showResult("Scanning anoncoin intel...");
-
-        try {
-          const resp = await fetch("/api/analyze-anoncoin", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ url })
-          });
-
-          const data = await resp.json().catch(() => ({}));
-
-          if (!resp.ok) {
-            showResult(
-              data.error ||
-                "Scan failed. Could not retrieve intel from Anoncoin / Dexscreener.",
-              true
-            );
-            return;
-          }
-
-          const summary = data.summary || "Scan complete. No summary generated.";
-          showResult(summary);
-        } catch (err) {
-          console.error(err);
-          showResult("Unexpected error while scanning token.", true);
-        } finally {
-          analyzeBtn.disabled = false;
-        }
+    async function scan() {
+      const input = inputEl.value.trim();
+      if (!input) {
+        show("Please paste a URL or contract address.");
+        return;
       }
 
-      function showResult(text, isError) {
-        resultBox.style.display = "block";
-        resultBox.textContent = text;
-        resultBox.classList.toggle("error", !!isError);
-      }
+      btn.disabled = true;
+      show("Scanning...");
 
-      analyzeBtn.addEventListener("click", analyze);
-      urlInput.addEventListener("keydown", (e) => {
-        if (e.key === "Enter" && (e.metaKey || e.ctrlKey)) {
-          analyze();
-        }
+      const res = await fetch("/api/analyze-anoncoin", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ input })
       });
-    </script>
-  </body>
+
+      const data = await res.json();
+      show(data.summary || data.error || "Error.");
+      btn.disabled = false;
+    }
+
+    function show(text) {
+      resultBox.style.display = "block";
+      resultBox.textContent = text;
+    }
+
+    btn.addEventListener("click", scan);
+  </script>
+</body>
 </html>
