--- a/public/index.html
+++ b/public/index.html
@@ -2,96 +2,377 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Anoncoin Token Scanner</title>
+  <title>DogeOS CA Intel Console</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
+    :root {
+      --bg-main: #000000;
+      --card-bg: #05070d;
+      --accent-primary: #22c55e;
+      --accent-secondary: #38bdf8;
+      --accent-danger: #f97373;
+      --accent-warn: #facc15;
+      --border-soft: #1f2933;
+      --text-muted: #9ca3af;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      background: #000;
-      color: #fff;
       margin: 0;
-      padding: 30px;
+      padding: 24px;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: radial-gradient(circle at top, #111827 0, #000000 45%, #000000 100%);
+      color: #ffffff;
     }
-    .container {
-      max-width: 700px;
-      margin: auto;
-      background: #111;
-      padding: 25px;
-      border-radius: 10px;
-      border: 1px solid #333;
+
+    .shell {
+      max-width: 980px;
+      margin: 0 auto;
+      border-radius: 18px;
+      padding: 1px;
+      background: linear-gradient(135deg, #22c55e33, #38bdf833, #6366f133);
+      box-shadow: 0 0 40px rgba(56, 189, 248, 0.35);
     }
+
+    .console {
+      background: var(--bg-main);
+      border-radius: 17px;
+      padding: 20px 20px 22px;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 18px;
+    }
+
+    .header-left h1 {
+      font-size: 1.3rem;
+      margin: 0;
+    }
+
+    .header-left p {
+      margin: 4px 0 0;
+      font-size: 0.8rem;
+      color: var(--text-muted);
+    }
+
+    .badge {
+      font-size: 0.7rem;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      padding: 4px 10px;
+      border-radius: 999px;
+      border: 1px solid #22c55e88;
+      color: #bbf7d0;
+      background: radial-gradient(circle at top, #064e3b 0, #022c22 40%, #000 90%);
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: minmax(0, 1.1fr) minmax(0, 1.1fr);
+      gap: 16px;
+    }
+
+    @media (max-width: 768px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    .panel {
+      background: var(--card-bg);
+      border-radius: 14px;
+      border: 1px solid var(--border-soft);
+      padding: 14px 14px 14px;
+      box-shadow: 0 16px 35px rgba(0, 0, 0, 0.5);
+    }
+
+    .panel-title {
+      font-size: 0.9rem;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      color: var(--text-muted);
+      margin: 0 0 10px;
+    }
+
+    .panel-title span {
+      color: var(--accent-secondary);
+    }
+
     textarea {
       width: 100%;
+      border-radius: 10px;
+      border: 1px solid #4b5563;
+      background: #020617;
+      color: #f9fafb;
       padding: 10px;
-      background: #222;
-      color: #fff;
-      border: 1px solid #444;
-      border-radius: 6px;
+      min-height: 68px;
+      resize: vertical;
+      font-size: 0.9rem;
+      outline: none;
     }
+
+    textarea::placeholder {
+      color: #6b7280;
+    }
+
+    .controls {
+      margin-top: 8px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+
+    .hint {
+      font-size: 0.75rem;
+      color: var(--text-muted);
+      opacity: 0.9;
+    }
+
     button {
-      margin-top: 10px;
-      padding: 10px 18px;
       border: none;
-      background: #00ff9d;
-      color: #000;
-      font-weight: bold;
+      outline: none;
       cursor: pointer;
-      border-radius: 6px;
+      border-radius: 999px;
+      padding: 8px 16px;
+      font-size: 0.85rem;
+      font-weight: 600;
+      color: #000;
+      background: linear-gradient(135deg, #22c55e, #a3e635);
+      box-shadow: 0 0 18px rgba(34, 197, 94, 0.55);
     }
-    .result {
-      margin-top: 18px;
-      padding: 15px;
-      background: #000;
-      border: 1px solid #333;
-      border-radius: 6px;
+
+    button:disabled {
+      opacity: 0.5;
+      cursor: default;
+      box-shadow: none;
+    }
+
+    .intel-output {
       white-space: pre-wrap;
-      font-family: monospace;
+      font-family: "JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco,
+        Consolas, "Liberation Mono", "Courier New", monospace;
+      font-size: 0.8rem;
+      color: #e5e7eb;
+      max-height: 340px;
+      overflow: auto;
+      padding-right: 4px;
+    }
+
+    .intel-output::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    .intel-output::-webkit-scrollbar-thumb {
+      background: #374151;
+      border-radius: 4px;
+    }
+
+    .risk-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 6px;
+    }
+
+    .risk-level-pill {
+      font-size: 0.7rem;
+      text-transform: uppercase;
+      padding: 3px 10px;
+      border-radius: 999px;
+      border: 1px solid #4b5563;
+    }
+
+    .risk-low {
+      border-color: #22c55e;
+      color: #bbf7d0;
+      background: #022c22;
+    }
+    .risk-medium {
+      border-color: #facc15;
+      color: #fef9c3;
+      background: #422006;
+    }
+    .risk-high {
+      border-color: #f97373;
+      color: #fee2e2;
+      background: #450a0a;
+    }
+    .risk-unknown {
+      border-color: #6b7280;
+      color: #e5e7eb;
+      background: #020617;
+    }
+
+    .risk-body {
+      white-space: pre-wrap;
+      font-family: "JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco,
+        Consolas, "Liberation Mono", "Courier New", monospace;
+      font-size: 0.8rem;
+      color: #e5e7eb;
+      max-height: 340px;
+      overflow: auto;
+      padding-right: 4px;
+    }
+
+    .risk-body::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    .risk-body::-webkit-scrollbar-thumb {
+      background: #374151;
+      border-radius: 4px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Anoncoin Scanner</h2>
-    <p>Paste an <strong>Anoncoin token URL</strong> (https://anoncoin.it/token) or a <strong>contract address</strong>.</p>
+  <div class="shell">
+    <div class="console">
+      <div class="header">
+        <div class="header-left">
+          <h1>DogeOS CA Intel Console</h1>
+          <p>Paste a token contract. Agent scans on-chain data and returns AI risk brief.</p>
+        </div>
+        <div class="header-right">
+          <span class="badge">DOGEOS AGENT · CA ONLY · NO FINANCIAL ADVICE</span>
+        </div>
+      </div>
 
-    <textarea id="input" rows="3" placeholder="https://anoncoin.it/SHIBA2 or 0x... or Solana address"></textarea>
-    <button id="scanBtn">Scan Token</button>
+      <div class="panel" style="margin-bottom: 16px;">
+        <div class="panel-title"><span>Input</span> · Contract Scope</div>
+        <textarea
+          id="input-field"
+          placeholder="Paste a contract address (0x... or Solana-style) that ends in 'doge' or 'DUB'."
+        ></textarea>
+        <div class="controls">
+          <div class="hint">
+            Only contract addresses that look valid and end with <strong>doge</strong> or <strong>DUB</strong> are accepted.
+          </div>
+          <button id="scan-btn">Run DogeOS Scan</button>
+        </div>
+      </div>
 
-    <div id="result" class="result" style="display:none;"></div>
+      <div class="grid">
+        <div class="panel">
+          <div class="panel-title"><span>Module 1</span> · On-Chain Intel</div>
+          <div id="intel-output" class="intel-output" style="display:none;"></div>
+        </div>
+
+        <div class="panel">
+          <div class="panel-title"><span>Module 2</span> · AI Risk Brief</div>
+          <div class="risk-header">
+            <span style="font-size:0.8rem; color:var(--text-muted);">
+              Honeypot / scam risk evaluation
+            </span>
+            <span id="risk-pill" class="risk-level-pill risk-unknown">risk: unknown</span>
+          </div>
+          <div id="risk-output" class="risk-body" style="display:none;"></div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script>
-    const inputEl = document.getElementById("input");
-    const btn = document.getElementById("scanBtn");
-    const resultBox = document.getElementById("result");
+    const inputField = document.getElementById("input-field");
+    const scanBtn = document.getElementById("scan-btn");
+    const intelOutput = document.getElementById("intel-output");
+    const riskOutput = document.getElementById("risk-output");
+    const riskPill = document.getElementById("risk-pill");
 
-    async function scan() {
-      const input = inputEl.value.trim();
+    function setRiskPill(level) {
+      const lvl = (level || "unknown").toLowerCase();
+      riskPill.className = "risk-level-pill";
+      let label = "risk: unknown";
+
+      if (lvl.includes("low")) {
+        riskPill.classList.add("risk-low");
+        label = "risk: low";
+      } else if (lvl.includes("medium")) {
+        riskPill.classList.add("risk-medium");
+        label = "risk: medium";
+      } else if (lvl.includes("high")) {
+        riskPill.classList.add("risk-high");
+        label = "risk: high";
+      } else {
+        riskPill.classList.add("risk-unknown");
+      }
+
+      riskPill.textContent = label;
+    }
+
+    function showIntel(text) {
+      intelOutput.style.display = "block";
+      intelOutput.textContent = text;
+    }
+
+    function showRisk(text, level) {
+      riskOutput.style.display = "block";
+      riskOutput.textContent = text;
+      setRiskPill(level);
+    }
+
+    async function runScan() {
+      const input = inputField.value.trim();
       if (!input) {
-        show("Please paste a URL or contract address.");
+        showIntel("No input provided. Paste a contract address first.");
+        showRisk("No input provided. Nothing to analyze.", "unknown");
         return;
       }
 
-      btn.disabled = true;
-      show("Scanning...");
+      scanBtn.disabled = true;
+      showIntel("Running on-chain fetch via Dexscreener...");
+      showRisk("Requesting AI risk brief from DogeOS core...", "unknown");
 
-      const res = await fetch("/api/analyze-anoncoin", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ input })
-      });
+      try {
+        const resp = await fetch("/api/analyze-anoncoin", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ input })
+        });
 
-      const data = await res.json();
-      show(data.summary || data.error || "Error.");
-      btn.disabled = false;
+        const data = await resp.json().catch(() => ({}));
+
+        if (!resp.ok) {
+          const msg = data.error || "Scan failed at server level.";
+          showIntel("Error: " + msg);
+          showRisk(
+            "No AI risk brief due to upstream error.\n\nIntel only. No financial advice.",
+            "unknown"
+          );
+          return;
+        }
+
+        showIntel(data.summary || "No summary returned.");
+        showRisk(
+          data.aiRisk ||
+            "AI risk module returned no content.\n\nIntel only. No financial advice.",
+          data.aiRiskLevel || "unknown"
+        );
+      } catch (e) {
+        console.error(e);
+        showIntel("Unexpected error while calling scanner backend.");
+        showRisk(
+          "AI risk brief unavailable due to connectivity error.\n\nIntel only. No financial advice.",
+          "unknown"
+        );
+      } finally {
+        scanBtn.disabled = false;
+      }
     }
 
-    function show(text) {
-      resultBox.style.display = "block";
-      resultBox.textContent = text;
-    }
-
-    btn.addEventListener("click", scan);
+    scanBtn.addEventListener("click", runScan);
+    inputField.addEventListener("keydown", (e) => {
+      if (e.key === "Enter" && (e.metaKey || e.ctrlKey)) {
+        runScan();
+      }
+    });
   </script>
 </body>
 </html>
