--- a/public/index.html
+++ b/public/index.html
@@ -143,6 +143,21 @@
       box-shadow: none;
     }
 
+    .link-bar {
+      font-size: 0.8rem;
+      color: var(--text-muted);
+      margin-bottom: 8px;
+    }
+
+    .link-bar a {
+      color: var(--accent-green);
+      text-decoration: none;
+    }
+
+    .link-bar a:hover {
+      text-decoration: underline;
+    }
+
     .intel-output {
       white-space: pre-wrap;
       font-family: "JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco,
@@ -230,6 +245,7 @@
       <div class="grid">
         <div class="panel">
           <div class="panel-title"><span>Module 1</span> · On-chain Intel</div>
+          <div id="link-bar" class="link-bar" style="display:none;"></div>
           <div id="intel-output" class="intel-output" style="display:none;"></div>
         </div>
 
@@ -253,6 +269,7 @@
     const intelOutput = document.getElementById("intel-output");
     const riskOutput = document.getElementById("risk-output");
     const riskPill = document.getElementById("risk-pill");
+    const linkBar = document.getElementById("link-bar");
 
     function setRiskPill(level) {
       const lvl = (level || "unknown").toLowerCase();
@@ -280,17 +297,53 @@
       setRiskPill(level);
     }
 
+    function showLinks(links) {
+      linkBar.innerHTML = "";
+      const parts = [];
+
+      function addLink(label, url) {
+        if (!url) return;
+        const a = document.createElement("a");
+        try {
+          a.href = url;
+        } catch {
+          return;
+        }
+        a.target = "_blank";
+        a.rel = "noopener noreferrer";
+        a.textContent = label;
+        if (linkBar.childNodes.length > 0) {
+          const sep = document.createElement("span");
+          sep.textContent = " | ";
+          linkBar.appendChild(sep);
+        }
+        linkBar.appendChild(a);
+      }
+
+      if (links?.website) addLink("Website", links.website);
+      if (links?.telegram) addLink("Telegram", links.telegram);
+      if (links?.x) addLink("X (Twitter)", links.x);
+      if (links?.dexscreener) addLink("Dexscreener", links.dexscreener);
+
+      linkBar.style.display = linkBar.childNodes.length ? "block" : "none";
+    }
+
     async function runScan() {
       const input = inputField.value.trim();
       if (!input) {
         showIntel("No input provided. Paste a contract address first.");
-        showRisk("No input provided. Nothing to analyze.\n\nIntel only. No financial advice.", "unknown");
+        showRisk(
+          "No input provided. Nothing to analyze.\n\nIntel only. No financial advice.",
+          "unknown"
+        );
+        showLinks(null);
         return;
       }
 
       scanBtn.disabled = true;
       showIntel("Running on-chain fetch via Dexscreener...");
       showRisk("Requesting AI risk brief from muchdogeagent core...", "unknown");
+      showLinks(null);
 
       try {
         const resp = await fetch("/api/analyze-anoncoin", {
@@ -308,6 +361,7 @@
             "No AI risk brief due to upstream error.\n\nIntel only. No financial advice.",
             "unknown"
           );
+          showLinks(null);
           return;
         }
 
@@ -317,6 +371,7 @@
             "AI risk module returned no content.\n\nIntel only. No financial advice.",
           data.aiRiskLevel || "unknown"
         );
+        showLinks(data.links || null);
       } catch (e) {
         console.error(e);
         showIntel("Unexpected error while calling scanner backend.");
@@ -324,6 +379,7 @@
           "AI risk brief unavailable due to connectivity error.\n\nIntel only. No financial advice.",
           "unknown"
         );
+        showLinks(null);
       } finally {
         scanBtn.disabled = false;
       }
